static/css/theme.css
/* ... */
textarea:hover, input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, select[multiple=multiple]:hover {
    border-color: #c4c4c4;
}
textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, select[multiple=multiple]:focus {
    border-color: #00bdf3;
    box-shadow: inset 0 1px 3px rgba(0,0,0,.06),0 0 5px rgba(0,169,218,.7)
}
#header-wrapper {
    background: #8451a1;
    color: #fff;
    text-align: center;
    border-bottom: 4px solid #9c6fb6;
    padding: 1rem;
}
#header a {
    display: inline-block;
}
#header #logo-svg {
    width: 8rem;
    height: 2rem;
}
#header #logo-svg path {
    fill: #fff;
}
.searchbox {
    margin-top: 1rem;
    position: relative;
    border: 1px solid #915eae;
    background: #764890;
    border-radius: 4px;
}
.searchbox label {
    color: rgba(255, 255, 255, 0.8);
    position: absolute;
    left: 10px;
    top: 3px;
}
.searchbox span {
    color: rgba(255, 255, 255, 0.6);
    position: absolute;
    right: 10px;
    top: 3px;
    cursor: pointer;
}
.searchbox span:hover {
    color: rgba(255, 255, 255, 0.9);
}
.searchbox input {
    display: inline-block;
    color: #fff;
    width: 100%;
    height: 30px;
    background: transparent;
    border: 0;
    padding: 0 25px 0 30px;
    margin: 0;
    font-weight: 300;
}
.searchbox input::-webkit-input-placeholder {
    color: rgba(255, 255, 255, 0.6);
}
.searchbox input::-moz-placeholder {
    color: rgba(255, 255, 255, 0.6);
}
.searchbox input:-moz-placeholder {
    color: rgba(255, 255, 255, 0.6);
}
.searchbox input:-ms-input-placeholder {
    color: rgba(255, 255, 255, 0.6);
}
#sidebar-toggle-span {
    display: none;
}
@media only all and (max-width: 47.938em) {
    #sidebar-toggle-span {
        display: inline;
    }
}
#sidebar {
    background-color: #322A38;
    position: fixed;
    top: 0;
    width: var(--SIDEBAR-width);
    bottom: 0;
    left: 0;
    font-weight: 400;
    font-size: 15px;
}
#sidebar a {
    color: #ccc;
}
#sidebar a:hover {
    color: #e6e6e6;
}
#sidebar a.subtitle {
    color: rgba(204, 204, 204, 0.6);
}
#sidebar hr {
    border-bottom: 1px solid #2a232f;
}
#sidebar a.padding {
    padding: 0 1rem;
}
#sidebar h5 {
    margin: 2rem 0 0;
    position: relative;
    line-height: 2;
}
#sidebar h5 a {
    display: block;
    margin-left: 0;
    margin-right: 0;
    padding-left: 1rem;
    padding-right: 1rem;
}
#sidebar h5 i {
    color: rgba(204, 204, 204, 0.6);
    position: absolute;
    right: 0.6rem;
    top: 0.7rem;
    font-size: 80%;
}
#sidebar h5.parent a {
    background: #201b24;
    color: #d9d9d9 !important;
}
#sidebar h5.active a {
    background: #fff;
    color: #777 !important;
}
#sidebar h5.active i {
    color: #777 !important;
}
#sidebar h5 + ul.topics {
    display: none;
    margin-top: 0;
}
#sidebar h5.parent + ul.topics, #sidebar h5.active + ul.topics {
    display: block;
}
#sidebar ul {
    list-style: none;
    padding: 0;
    margin: 0;
}
#sidebar ul.searched a {
    color: #999999;
}
#sidebar ul.searched .search-match a {
    color: #e6e6e6;
}
#sidebar ul.searched .search-match a:hover {
    color: white;
}
#sidebar ul.topics {
    margin: 0 1rem;
}
#sidebar ul.topics.searched ul {
    display: block;
}
#sidebar ul.topics ul {
    display: none;
    padding-bottom: 1rem;
}
#sidebar ul.topics ul ul {
    padding-bottom: 0;
}

/*#sidebar ul.topics li.parent > ul { /* <- NEW VERSION, ONLY DIRECT CHILDREN EXPANDED*/
#sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {  /* <- OLD VERSION ALL CHILDREN EXPANDED */
    display: block;
}
#sidebar ul.topics > li > a {
    line-height: 2rem;
    font-size: 1.1rem;
}
#sidebar ul.topics > li > a b {
    opacity: 0.5;
    font-weight: normal;
}
#sidebar ul.topics > li > a .fa {
    margin-top: 9px;
}
#sidebar ul.topics > li.parent, #sidebar ul.topics > li.active {
    background: #251f29;
    margin-left: -1rem;
    margin-right: -1rem;
    padding-left: 1rem;
    padding-right: 1rem;
}
#sidebar ul li.active > a {
    background: #fff;
    color: #777 !important;
    margin-left: -1rem;
    margin-right: -1rem;
    padding-left: 1rem;
    padding-right: 1rem;
}
#sidebar ul li {
    padding: 0;
}
#sidebar ul li.visited + span {
    margin-right: 16px;
}
#sidebar ul li a {
    display: block;
    padding: 2px 0;
}
#sidebar ul li a span {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    display: block;
}
#sidebar ul li > a {
    padding: 4px 0;
}
#sidebar ul li.visited > a .read-icon {
    color: #9c6fb6;
    display: inline;
}
#sidebar ul li li {
    padding-left: 1rem;
    text-indent: 0.2rem;
}
#main {
    background: #f7f7f7;
    margin: 0 0 1.563rem 0;
}
#body {
    position: relative;
    margin-left: var(--SIDEBAR-width);
    min-height: 100vh;
    max-width: 900px;
    background: #f0f0f5;
}
#body img, #body .video-container {
    margin: 3rem auto;
    display: block;
    text-align: center;
}
#body img.border, #body .video-container.border {
    border: 2px solid #e6e6e6 !important;
    padding: 2px;
}
#body img.shadow, #body .video-container.shadow {
    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
}
#body img.inline {
    display: inline !important;
    margin: 0 !important;
    vertical-align: bottom;
}
#body .bordered {
    border: 1px solid #ccc;
}
/* ... */

